[package]
name = "joff"
version = "0.2.0"
edition = "2018"
description = "Store JSON API responses in a key-value store and serve them locally."
license = "Apache-2.0"
authors = ["Petter Karlsrud <petterkarlsrud@me.com>"]

[profile.release]
debug = 1

[dependencies]
quicli = "0.4.0"
structopt = "0.3.21"
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
kv = "0.22.0"  
url = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2.1.0" 
rocket = "0.4.7"
