[package]
name = "joff"
version = "1.0.0"
edition = "2021"
description = "Store JSON API responses in a key-value store and serve them locally."
license = "Apache-2.0"
authors = ["Petter K<ptrkrlsrd@users.noreply.github.com>"]

[profile.release]
debug = 1

[dev-dependencies]
httpmock = "0.5"

[dependencies]
quicli = "0.4.0"
structopt = "0.3.21"
clap = { version = "4.1.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
kv = "0.22.0"  
url = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2.1.0" 
rocket = "0.4.7"
anyhow = "1.0.70"
