[package]
name = "duplique"
version = "0.1.0"
authors = ["Petter Karlsrud <petterkarlsrud@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4.0"
structopt = "0.3.21"
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
kv = "0.22.0"  
url = "2.2.1"
serde_json = "1"
percent-encoding = "2.1.0" 
rocket = "0.5.0-rc.3"
anyhow = "1.0.70"
